--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ psycopg2-binary = "^2.9.5"
 fastapi = "^0.95.0"
 uvicorn = "^0.21.1"
 requests = "^2.29.0"
+jose = {extras = ["cryptography"], version = "^1.0.0"}
+passlib = "^1.7.4"
+jwt = "^1.3.1"
+pyjwt = "^2.7.0"
+python-multipart = "^0.0.6"
+bcrypt = "^4.0.1"
 
 
 [build-system]
