--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ jwt = "^1.3.1"
 pyjwt = "^2.7.0"
 python-multipart = "^0.0.6"
 bcrypt = "^4.0.1"
-
+pyswip = "^0.2.10"
 
 [build-system]
 requires = ["poetry-core"]
