--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pyjwt = "^2.7.0"
 python-multipart = "^0.0.6"
 bcrypt = "^4.0.1"
 pyswip = "^0.2.10"
+reportlab = "^4.0.4"
+openpyxl = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
